Added astro site for serving releases; Backend compiles into binary

--- a/apps/site/src/layouts/RootLayout.astro
+++ b/apps/site/src/layouts/RootLayout.astro
@@ -22,4 +22,8 @@ import '@repo/ui/globals.css';
     font-weight: normal;
     font-style: normal;
   }
+
+  body {
+    @apply font-mono;
+  }
 </style>
