--- a/apps/site/src/pages/index.astro
+++ b/apps/site/src/pages/index.astro
@@ -1,16 +1,23 @@
 ---
+import LatestRelease from '../components/latest-release';
 import RootLayout from '../layouts/RootLayout.astro';
 ---
 
 <RootLayout>
   <div class="min-h-screen h-full flex flex-col">
-    <main class="m-auto space-y-6 text-center font-mono p-6 bg-muted border rounded">
-      <p class="font-bold uppercase text-2xl">{'<unified-app-site />'}</p>
-      <div
-        class="flex flex-col items-center text-xl gap-4 text-muted-foreground underline underline-offset-4"
-      >
-        <div>🚧 Build in progress 🚧</div>
+    <main class="m-auto flex flex-col text-xl">
+      <div class="flex flex-col space-y-4 text-center p-6 bg-muted/50 border rounded">
+        <p class="font-bold uppercase text-2xl font-mono">{'<unified-app-site />'}</p>
+        <a class="underline underline-offset-2" href={import.meta.env.PUBLIC_APP_BASE_URL}
+          >Navigate to the web app</a
+        >
       </div>
+      <LatestRelease client:load />
+      <a
+        class="text-center mt-8 font-extrabold tracking-tight hover:underline underline-offset-4 hover:text-primary"
+        href="https://github.com/JakubGluszek/unified-app-monorepo"
+        target="_blank">Github</a
+      >
     </main>
   </div>
 </RootLayout>
